--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,13 @@ android {
         viewBinding true
     }
 
+    ndkVersion '24.0.8215888'
+
+//    externalNativeBuild{
+//        ndkBuild{
+//            path 'src/main/jni/Android.mk'
+//        }
+//    }
 }
 
 dependencies {
