--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,22 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.sjgroup.android_imperative">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".ImperativeApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:name=".ImperativeApplication"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:targetApi="31">
-
-        <activity android:name=".activities.DetailActivity"/>
-
+        <activity
+            android:name=".HistoryActivity"
+            android:exported="false" />
+        <activity android:name=".activities.DetailActivity" />
         <activity
             android:name=".activities.MainActivity"
             android:exported="true">
