--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,11 @@ android {
 
     ndkVersion '24.0.8215888'
 
-//    externalNativeBuild{
-//        ndkBuild{
-//            path 'src/main/jni/Android.mk'
-//        }
-//    }
+    externalNativeBuild{
+        ndkBuild{
+            path 'src/main/jni/Android.mk'
+        }
+    }
 }
 
 dependencies {
